--- a/css/music-styles.css
+++ b/css/music-styles.css
@@ -28,7 +28,7 @@
   }
   #logo a{
     text-decoration: none;
-    color: #fff;
+    color: #000;
   }
   header #logo {
     color: #fff;
@@ -104,3 +104,212 @@
   
   .fixed #about a {color: #343434}
   .fixed #about a:hover {color: #7c7c7c}
+
+
+  #music {
+    text-align: center;
+  }
+  .music-block{
+    text-align: center;
+    padding: 100px 0 0 0;
+  }
+  .music-title{
+    margin: 50px 0;
+    color: #484848;
+    font-size: 2em;
+  }
+  
+  .music-title {
+    overflow: hidden;
+  }
+  .music-title h3:before,
+  .music-title h3:after {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    box-sizing: border-box;
+    width: 100%;
+    height: 2px;
+    background: black;
+    border: solid #FFF;
+    border-width: 0 5px;
+  }
+  .music-title h3:before {
+    margin-left: -100%;
+  }
+  .music-title h3:after {
+    margin-right: -100%;
+  }
+  .music-title h5{
+    margin: 10px 0;
+  }
+
+
+  .audiocards{
+    display: flex;
+    overflow: hidden;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .audiocards .audiocard{
+    display: flex;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+  }
+  .audiocard{
+    position: relative;
+    width: 350px;
+    background: #f1f3f4;
+    box-shadow: -1px 5px 5px  rgba(0,0,0,0.2);
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all .5s;
+    margin: 20px 20px;
+  }
+  .audiocard:hover{
+    box-shadow: 0 20px 40px rgba(0,0,0,0.25);
+  }
+  
+  .audiocard .imgbox{
+    position: relative;
+    width: 100%;
+    height: 350px;
+      align-items: center;
+  }
+  
+  .audiocard .imgbox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .audiocard audio{
+    width: 100%;
+    outline: none;
+  }
+  
+  @media (min-width: 700px) {
+    .audio-cards .audiocard{
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
+  }
+
+  #contacts{
+    text-align: center;
+  }
+  .contacts-title{
+    margin: 50px 0;
+    color: #484848;
+    font-size: 2em;
+  }
+  
+  .contacts-title {
+    overflow: hidden;
+  }
+  .contacts-title h3:before,
+  .contacts-title h3:after {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    box-sizing: border-box;
+    width: 100%;
+    height: 2px;
+    background: black;
+    border: solid #FFF;
+    border-width: 0 5px;
+  }
+  .contacts-title h3:before {
+    margin-left: -100%;
+  }
+  .contacts-title h3:after {
+    margin-right: -100%;
+  }
+  
+  .info{
+    color: #484848;
+    font-size: 1.5em;
+  }
+  .info a{
+    text-decoration: none;
+  }
+  .info h3{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+  .info .authors{
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    height: 100%;
+    max-width: 100%;
+  }
+  .info .authors h3{
+    margin-bottom: 0px;
+  }
+  .author-card{
+    width: 50%;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  @media (max-width: 500px){
+    .author-card{
+      width: 100%;
+      margin-top: 20px;
+    }
+  }
+  .info h4{
+    margin-top: 30px;
+  }
+  .social-media{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .social-media {
+    font-size: 1.5em;
+    transition: color .5s;
+  }
+  .social-media li{
+    margin: 10px 20px -10px;
+  }
+  
+  .fa-facebook-square{
+    color: #3b5999;
+  }
+  
+  .fa-vk{
+    color: #3b5999;
+  }
+  
+  .fa-twitter-square{
+    color: #55acee;
+  }
+  
+  .fa-telegram{
+    color: #55acee;
+  }
+  
+  .fa-instagram{
+    color: #f711ab;
+  }
+  
+  .fa-google{
+    color: #dd4b39;
+  }
+  
+  .fa-facebook-square:hover, .fa-twitter-square:hover, .fa-instagram:hover, .fa-google:hover, .fa-vk:hover, .fa-telegram:hover{
+    color: #45e19f;
+  }
